--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <div class="logo_box"><img class="logo.img" scr="images/login_logo.png"></div>
   <div class="login_box">
     <h1 class="title">欢迎登陆</h1>
-    <input class="input_box" type="text" placeholder="用户名">
-    <input class="input_box" type="possword" placeholder="密码">
+    <input class="input_box" type="text" placeholder="用户名(您的姓名)">
+    <input class="input_box" type="possword" placeholder="密码(您的生日)">
     <input class="button_box" type="button" value="登录">
   </div>
 
