--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,14 +6,14 @@
 </head>
 
 <body>
-  <div class="logo_box"><img class="logo.img" scr="images/login_logo.png"></div>
+  <div class="logo_box"><img class="logo_img" src="images/login_logo.png"></div>
   <div class="login_box">
-    <h1 class="title">欢迎登陆</h1>
+    <h1 class="title">欢迎登录</h1>
     <input class="input_box" type="text" placeholder="用户名(您的姓名)">
-    <input class="input_box" type="possword" placeholder="密码(您的生日)">
-    <input class="button_box" type="button" value="登录">
+    <input class="input_box" type="password" placeholder="密码(您的生日)">
+    <input id="login_button" class="button_box" type="button" value="登录">
   </div>
 
-
+  <script src="script.js"></script>
 </body>
 </html>
